# palmyra

./: .env  .gitignore  Makefile  docker-compose.yml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  gunicorn.config.py  pyproject.toml  requirements.txt  wsgi.py
backend/app/: __init__.py  config.py  extentions.py  models.py  websocket.py
backend/app/routes/: auth.py  chat.py  message.py  user.py
frontend/: Dockerfile  index.html  jsconfig.json  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.js  App.jsx  index.js
frontend/src/api/: api.js  auth.js
frontend/src/assets/: rgb.js
frontend/src/assets/css/: base.css  vars.css
frontend/src/assets/fonts/FedraSansPro/: font-face.css
frontend/src/components/ui/: Toast.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useChatMessages.js  useChatSocket.js  useLocalSettings.js  useNotifications.js  useNotifications.jsx  useUserData.js
frontend/src/pages/Auth/: Auth.css  Auth.jsx
frontend/src/pages/Auth/components/: LoginForm.jsx  RegisterForm.jsx
frontend/src/pages/Home/: Home.css  Home.js  Home.jsx
frontend/src/pages/Home/components/ChatButton/: ChatButton.css  ChatButton.jsx
frontend/src/pages/Home/components/ChatConsole/: ChatConsole.css  ChatConsole.jsx
frontend/src/pages/Home/components/ChoseFile/: ChoseFile.css  ChoseFile.jsx
frontend/src/pages/Home/components/EmojiPicker/: EmojiPicker.jsx
frontend/src/pages/Home/components/MainChat/: MainChat.css  MainChat.jsx
(+16 files in other folders)
