[tool.poetry]
name="palmyra"
version="0.2.0"
description=""
authors=["Denis Bakulin dtorkon@yandex.ru"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.23.0"
sqlalchemy = "2.0.39"
bidict = "0.23.1"
blinker = "1.9.0"
click = "8.1.8"
dnspython = "2.7.0"
dotenv = "0.9.9"
eventlet = "0.39.1"
flask = "3.1.0"
flask-cors = "5.0.1"
flask-jwt-extended = "4.7.1"
flask-socketio = "5.5.1"
flask-sqlalchemy = "3.1.1"
greenlet = "3.1.1"
gunicorn = "23.0.0"
h11 = "0.14.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.6"
markupsafe = "3.0.2"
packaging = "25.0"
pyjwt = "2.10.1"
python-dotenv = "1.1.0"
python-engineio = "4.11.2"
python-socketio = "5.12.1"
simple-websocket = "1.1.0"
typing-extensions = "4.12.2"
werkzeug = "3.1.3"
wsproto = "1.2.0"
psycopg2-binary = ">=2.9"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"